--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,3 +5,10 @@
 .footer {
     height: 850px !important;
 }
+
+.purple-pink-gradient {
+  background: linear-gradient(90deg, #5956f0 0%, #ff50b8 100%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-transform: uppercase;
+}
