--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -21,7 +21,7 @@ html, body{
 }
 
 .pages {
-  padding-top: 100px;
+  padding-top: 95px;
 }
 
 .global-container {
@@ -31,12 +31,17 @@ html, body{
 @media screen and (width < 960px) {
   /* Start Home Page */ 
   .global-header {
-      font-size: 3em;
+      font-size: 3em !important;
   }
 
   .pages { 
-    padding-top: 79px;
+    padding-top: 74px;
   }
   /* End Home Page */
+}
+
+
+@media screen and (width > 1904px) {
+  
 }
 
